@@ -54,7 +54,7 @@
         $zm_sacsMapper->setMapping('gv_send');
         $zm_sacsMapper->setMapping('gv_send_confirm');
         $zm_sacsMapper->setMapping('product_reviews_write');
-        $zm_sacsMapper->setMapping('login', ZM_ACCOUNT_TYPE_ANONYMOUS);
+        $zm_sacsMapper->setMapping('index', ZM_ACCOUNT_TYPE_ANONYMOUS);
 
         if (!zm_setting('isTellAFriendAnonymousAllow')) {
             $zm_sacsMapper->setMapping('tell_a_friend');
